@@ -2,7 +2,7 @@ Source: anste
 Section: admin
 Priority: optional
 Maintainer: José Antonio Calvo <jacalvo@zentyal.com>
-Build-Depends: debhelper (>= 5), liberror-perl, libxml-dom-perl, libfile-copy-recursive-perl,
+Build-Depends: debhelper (>= 5), libtrycatch-lite-perl, libxml-dom-perl, libfile-copy-recursive-perl,
   libsoap-lite-perl, libperl6-slurp-perl, libconfig-tiny-perl, libperl6-junction-perl,
   libterm-readline-gnu-perl, libmail-rfc822-address-perl, libtext-template-perl, debootstrap,
   libvirt-bin, libyaml-libyaml-perl, libjson-xs-perl, sshpass, libattempt-perl, libio-interface-perl
@@ -10,7 +10,7 @@ Standards-Version: 3.7.2
 
 Package: anste
 Architecture: all
-Depends: perl (>=5.8.8-7), liberror-perl, libxml-dom-perl, libfile-copy-recursive-perl, libsoap-lite-perl,
+Depends: perl, libtrycatch-lite-perl, libxml-dom-perl, libfile-copy-recursive-perl, libsoap-lite-perl,
   libperl6-slurp-perl, qemu-kvm, ubuntu-vm-builder, libconfig-tiny-perl, libperl6-junction-perl,
   libterm-readline-gnu-perl, libmail-rfc822-address-perl, libtext-template-perl, debootstrap,
   libvirt-bin, libyaml-libyaml-perl, libjson-xs-perl, sshpass, libattempt-perl,
