@@ -24,7 +24,7 @@ use ANSTE::Exceptions::InvalidFile;
 
 use SOAP::Lite; # +trace => 'debug';
 use MIME::Base64;
-use Error qw(:try);
+use TryCatch::Lite;
 
 use constant URI => 'urn:ANSTE::Comm::SlaveServer';
 
@@ -136,15 +136,15 @@ sub put
     my $nTries = 3;
     while ((not $response) and $nTries) {
         try {
-            $response = $soap->put(SOAP::Data->name('name' => $file),
-                                   SOAP::Data->type('base64')->name('content' =>
-                                                                        $content));
-        } otherwise {
-            my ($ex) = @_;
+            $response = $soap->put(
+                SOAP::Data->name('name' => $file),
+                SOAP::Data->type('base64')->name('content' => $content)
+            );
+        } catch ($e) {
             $nTries -= 1;
-            print "SOAP Error: $ex. Tries left $nTries\n";
+            print "SOAP Error: $e. Tries left $nTries\n";
             sleep 5 if $nTries;
-        };
+        }
     }
 
     if ($response->fault) {
